--- a/style/main.css
+++ b/style/main.css
@@ -387,6 +387,33 @@ h3 {
     margin-left: 45%;
 }
 
+#map{
+    position: absolute;
+    width: 100%;
+    height: 500px;
+    left: 0px;
+
+    background: #E1F2E3;
+}
+.map-img{
+    position: absolute;
+    width: 100%;
+    height: 453px;
+    left: 0px;
+    top: 49px;
+}
+
+input {
+    border-radius: 10px;
+}
+
+form {
+    border-radius: 5px;
+    background: rgb(188, 188, 188);
+    display: inline-block;
+    padding: 25px;
+}
+
 @media only screen and (max-width: 800px) {
     .navigation li {
         display: block;
