--- a/style/main.css
+++ b/style/main.css
@@ -129,7 +129,7 @@ li {
     cursor: pointer;
     border-radius: 25px;
     padding: 16px;
-    background-color: #0047FF;
+    background-color: #0047ff;
     color: #B9DDFF;
     text-align: center;
 }
@@ -160,7 +160,7 @@ li {
     font-size: 2.2em;
 }
 
-.goods {
+#goods {
     display: block;
 }
 
@@ -387,22 +387,6 @@ h3 {
     margin-left: 45%;
 }
 
-#map{
-    position: absolute;
-    width: 100%;
-    height: 500px;
-    left: 0px;
-
-    background: #E1F2E3;
-}
-.map-img{
-    position: absolute;
-    width: 100%;
-    height: 453px;
-    left: 0px;
-    top: 49px;
-}
-
 input {
     border-radius: 10px;
 }
@@ -412,6 +396,22 @@ form {
     background: rgb(188, 188, 188);
     display: inline-block;
     padding: 25px;
+}
+
+#up_buttons {
+    position: fixed;
+    right: 50px;
+    bottom: 50px;
+}
+
+.up_button {
+    margin-left: 10px;
+    background: rgba(0, 71, 255);
+    opacity: 0.5;
+}
+
+.up_button:hover {
+    opacity: 1;
 }
 
 @media only screen and (max-width: 800px) {
@@ -436,7 +436,7 @@ form {
     .right {margin: 5px}
 }
 
-@media only screen and (max-width: 1035px) {
+@media only screen and (max-width: 1280px) {
     #preview * {
         margin: 0;
         padding: 0;
@@ -476,5 +476,5 @@ form {
 
 }
 
-@media only screen and (min-width: 1036px) {
+@media only screen and (min-width: 1280px) {
 }
