--- a/style/history.css
+++ b/style/history.css
@@ -1,14 +1,13 @@
 .info {
+    padding: 10px 0;
     display: flex;
     flex-direction: column;
     width: 100%;
     left: 0px;
     background: #87D3FD;
 }
-.info * {
-    padding: 10px;
-}
 .info img {
+    margin: 10px;
     max-height: 315px;
 }
 p{
