--- a/style/common.css
+++ b/style/common.css
@@ -136,6 +136,33 @@ h2 {
     opacity: 1;
 }
 
+#feedback_form{
+    background-size: cover;
+    height: 400px;
+    border-radius: 7px;
+    padding: 40px;
+}
+
+.feedback_form_block{
+    background: rgba(0, 71, 255, 0.3);
+    border-radius: 7px;
+    margin-top: 30px;
+}
+input {
+    border-radius: 10px;
+}
+
+form {
+    border-radius: 5px;
+    background: rgb(173, 3, 252);
+    display: inline-block;
+    padding: 70px;
+    margin-top: 60px;
+    margin-left: 35%;
+    margin-bottom: 60px;
+}
+
+
 @media only screen and (max-width: 560px) {
 
     #logo {
