--- a/style/contact.css
+++ b/style/contact.css
@@ -58,9 +58,8 @@
 
 .context img:hover {
     position: fixed;
-    max-width: none;
-    max-height: none;
-    width: 80%;
+    max-width: 70%;
+    max-height: 70%;
     height: auto;
 
 }
