--- a/style/main.css
+++ b/style/main.css
@@ -99,7 +99,7 @@ h3 {
     margin-top: 3px;
     height: 329px;
     width: 285px;
-    background-color: rgba(204, 252, 255, 0.80);
+    background-color: #24B732;
     border-radius: 53px;
 }
 
